# SALB

./: .gitattributes  .gitignore  BUILD  CMakeLists.txt  COPYING  Doxygen  README.md  astyle.config  bundle-release.sh  index.html  params.json  salb.sln
android/at/ftw/speechsynthesis/: TTSEngine.java
cli/: CMakeLists.txt  cli.vcxproj  cli.vcxproj.filters
cli/src/: htstts.cpp
data/: cmu_us_arctic_slt.htsvoice  leo.htsvoice  leo.rules  mini.rules
engine/manager/: CMakeLists.txt  manager.vcxproj  manager.vcxproj.filters
engine/manager/include/: FliteTextAnalyzer.h  HTSEngineSynthesizer.h  InternalTextAnalyzer.h  Label.h  Synthesizer.h  TTSLogger.h  TTSManager.h  TTSResult.h  Text.h  TextAnalyzer.h  common.h  utils.h
engine/manager/src/: FliteTextAnalyzer.cpp  HTSEngineSynthesizer.cpp  InternalTextAnalyzer.cpp  Label.cpp  Synthesizer.cpp  TTSLogger.cpp  TTSManager.cpp  Text.cpp  TextAnalyzer.cpp  utils.cpp
engine/synthesis/hts_engine/: .cproject  .project  CMakeLists.txt  NOTES  hts_engine.vcxproj  hts_engine.vcxproj.filters
engine/synthesis/hts_engine/lib/: HTS_sstream.c
engine/text/flite/: CMakeLists.txt  COPYING  flite.vcxproj  flite.vcxproj.filters
engine/text/flite/include/: cst_file.h  flite.h
engine/text/flite/lang/cmu_us_kal/: cmu_us_kal.c
engine/text/flite/lang/usenglish/: us_ffeatures.c  usenglish.c  usenglish.h
engine/text/flite/src/hrg/: cst_utterance.c
engine/text/flite/src/lexicon/: cst_lexicon.c  cst_lts.c
engine/text/flite/src/regex/: cst_regex.c
engine/text/flite/src/stats/: cst_cart.c
engine/text/flite/src/synth/: cst_ffeatures.c  cst_phoneset.c  cst_synth.c  cst_utt_utils.c  flite.c
engine/text/flite/src/utils/: cst_features.c  cst_tokenstream.c  cst_val.c  cst_val_user.c
engine/text/internal/: CMakeLists.txt
engine/text/internal/include/: AlbanianNormalizer.h  AustrianGermanNormalizer.h  LTSTree.h  Lexicon.h  Normalizer.h  Utterance.h
engine/text/internal/src/: AlbanianNormalizer.cpp  AustrianGermanNormalizer.cpp  LTSTree.cpp  Lexicon.cpp  Normalizer.cpp
jni/: Android.mk  Application.mk  SALB.cpp  SALB.h
sapi/: HTSTTS.rgs  Resource.h  dlldata.c  dllmain.cpp  dllmain.h  htssapi.cpp  htssapi.def  htssapi.idl  htssapi.rc  htssapi.vcxproj  htssapi.vcxproj.filters  htssapiPS.vcxproj  htssapiPS.vcxproj.filters  htstts.cpp  htstts.h  stdafx.cpp  stdafx.h  targetver.h
sapi/bin64/: register-leo.bat  register-slt.bat
sapi/install/: install.nsi
sapi/register/: register-voice.cpp  register.vcxproj  register.vcxproj.filters
test/: test.vcxproj  test.vcxproj.filters
test/src/: tests.cpp
test/testdata/: lts_rules.scm  mini.lex  mini.rules
